fix story-section info size to fit on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -415,7 +415,7 @@ video {
 .world__text-container {
   color: var(--color-primary-2);
   text-transform: uppercase;
-  transform: scale(1.4, 0.8);
+  transform: scale(1.2, 0.8);
   font-size: clamp(1.5rem, 2rem + 2vw, 7rem);
   z-index: 10;
   font-weight: 700;
@@ -1023,13 +1023,8 @@ video {
     opacity: 0;
   }
 
-  .story__background1,
-  .story__background2 {
-    min-width: 49rem;
-  }
-
   .story__paragraph {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
 
   .story__paragraph2 {
@@ -1039,6 +1034,7 @@ video {
 
   .story__info {
     width: 80%;
+    min-width: 30rem;
     text-align: center;
     color: var(--color-primary-2);
     margin: 0 auto;
@@ -1183,11 +1179,21 @@ video {
   }
 
   .characters__grid {
-    transform: translate(-50%, -50%) scale(0.65);
-    width: 100%;
-    min-width: 45rem;
+    transform: translate(-50%, -50%) scale(0.58);
   }
 
+  .characters__grid li {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    transform: rotate(45deg);
+    margin: -101px;
+    list-style: none;
+    overflow: hidden;
+    border: 1.5px solid var(--color-primary-2);
+    cursor: pointer;
+    transition: transform 0.3s, z-index 0.2s;
+  }
   .characters__grid li:active {
     transform: rotate(45deg) scale(1.5);
     border: 4px solid var(--color-primary-2);
@@ -1204,5 +1210,14 @@ video {
     min-width: 35rem;
     width: 80%;
     font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 590px) {
+  .characters__grid {
+    transform: translate(-50%, -50%) scale(0.36);
+  }
+  .story__paragraph {
+    font-size: 1.2rem;
   }
 }
